Fix #nav-links placement by increasing z-index

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -59,6 +59,7 @@ nav a {
 }
 
 #nav-links {
+  z-index: 1000;
   position: absolute;
   top: var(--nav-height);
   left: 0;
